samples/_failures_safe/1761494392_eb00ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22f06819.c: In function ‘tokenize’:
./samples/SAFE/__tmp_22f06819.c:172:9: error: expected expression at end of input
  172 |         } else if (read_string(t,
      |         ^
./samples/SAFE/__tmp_22f06819.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_22f06819.c:172:9: error: expected declaration or statement at end of input
